--- a/css/styles.css
+++ b/css/styles.css
@@ -445,3 +445,208 @@ img {
   display: flex;
   gap: 16px;
 }
+
+.footer-wrapper {
+margin-left: auto;
+}
+.wrapper-caption{
+  color:  #FFF;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+.subscribe-form{
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+.subscribe-form-field{}
+.subscribe-form-input{
+  padding: 8px 16px;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  background: var(--NAVY-BLUE, #2E2F42);
+  border: 1px solid  #FFF;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  color: #FFF;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 2;
+    letter-spacing: 0.04em;
+}
+  .subscribe-form-input::placeholder {
+  color:  #FFF;
+  font-size: 12px;
+ line-height: 2;
+  letter-spacing: 0.04em;
+}
+.subscribe-form-button{
+  color:  #FFF;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border-radius: 4px;
+    background:  #4D5AE5;
+    display: flex;
+      padding: 8px 24px;
+      justify-content: center;
+      align-items: center;
+      gap: 16px;
+}
+.subscribe-form-icon {
+  fill: white;
+}
+
+
+
+/* Modal window */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+
+  transition: opacity 300ms ease-in, visibility 300ms ease-in;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+}
+
+.modal {
+  width: 408px;
+  min-height: 584px;
+  padding: 24px;
+  border-radius: 4px;
+  background-color: #fcfcfc;
+}
+.modal-btn {
+  margin-left: auto;
+  margin-bottom: 24px;;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e7e9fc;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  stroke-width: 1px;
+  stroke: rgba(0, 0, 0, 0.1);
+  border: #e7e9fc;
+}
+
+.close-icon {
+  stroke: currentColor;
+}
+
+.modal-caption {
+  width: 360px;
+  margin-bottom: 16px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.form-label {
+  display: block;
+  color: #8e8f99;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+  margin-bottom: 4px; 
+}
+
+.input-icons {
+ position: relative;
+  margin-bottom: 8px;
+}
+
+.form-input {
+  width: 100%;
+  height: 40px;
+  outline: none;
+  padding-left: 38px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  transition: border-color 300ms ease-in;
+}
+  .form-input:focus {
+border: 1px solid var(--IRIS, #4D5AE5);
+}
+.form-icon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 16px;
+  stroke: currentColor;
+  transition: fill 300ms ease-in;
+}
+.form-input:focus+.form-icon {
+  fill: #4D5AE5;
+}
+
+.form-comment {
+  min-height: 120px;
+  padding-top: 8px;
+  padding-left: 16px;
+}
+
+.checkbox-text {
+  margin-top: 16px;
+  margin-bottom: 24px;
+  color: #8e8f99;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+}
+.privacy-police {
+  color: #4d5ae5;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  text-decoration-line: underline;
+}
+
+.submit-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px 32px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 4px;
+  background: #4d5ae5;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  color: var(--WHITE, #fff);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  gap: 10px;
+}
+.submit-btn-text {
+  width: 105px;
+}
+
