--- a/css/styles.css
+++ b/css/styles.css
@@ -605,7 +605,10 @@ border: 1px solid var(--IRIS, #4D5AE5);
 }
 
 .form-comment {
+  width: 100%;
+  resize: vertical;
   min-height: 120px;
+  max-height: 180px;
   padding-top: 8px;
   padding-left: 16px;
 }
