--- a/css/styles.css
+++ b/css/styles.css
@@ -468,6 +468,7 @@ margin-left: auto;
   border-radius: 4px;
   width: 264px;
   height: 40px;
+  background-color: transparent;
   background: var(--NAVY-BLUE, #2E2F42);
   border: 1px solid  #FFF;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
@@ -484,6 +485,8 @@ margin-left: auto;
   letter-spacing: 0.04em;
 }
 .subscribe-form-button{
+  min-width: 165px;
+  height: 40px;
   color:  #FFF;
   text-align: center;
   font-size: 16px;
@@ -497,9 +500,12 @@ margin-left: auto;
       justify-content: center;
       align-items: center;
       gap: 16px;
+      border: none;
+      cursor: pointer;
 }
 .subscribe-form-icon {
   fill: white;
+  margin-left: 16px;
 }
 
 
@@ -518,7 +524,7 @@ margin-left: auto;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
 
-  transition: opacity 300ms ease-in, visibility 300ms ease-in;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
