--- a/css/styles.css
+++ b/css/styles.css
@@ -469,7 +469,6 @@ margin-left: auto;
   width: 264px;
   height: 40px;
   background-color: transparent;
-  background: var(--NAVY-BLUE, #2E2F42);
   border: 1px solid  #FFF;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: #FFF;
@@ -481,7 +480,7 @@ margin-left: auto;
   .subscribe-form-input::placeholder {
   color:  #FFF;
   font-size: 12px;
- line-height: 2;
+  line-height: 2;
   letter-spacing: 0.04em;
 }
 .subscribe-form-button{
@@ -539,51 +538,71 @@ margin-left: auto;
 .modal {
   width: 408px;
   min-height: 584px;
-  padding: 24px;
+  padding: 72px 24px 24px 24px;
   border-radius: 4px;
   background-color: #fcfcfc;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-btn {
-  margin-left: auto;
-  margin-bottom: 24px;;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #e7e9fc;
-  width: 24px;
-  height: 24px;
-  border-radius: 50%;
-  stroke-width: 1px;
-  stroke: rgba(0, 0, 0, 0.1);
-  border: #e7e9fc;
+position: absolute;
+top: 24px;
+right: 24px;
+padding: 0;
+cursor: pointer;
+border: 1px solid rgba(0, 0, 0, 0.1);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+display: flex;
+align-items: center;
+justify-content: center;
+width: 24px;
+height: 24px;
+border-radius: 50%;
+stroke-width: 1px;
+background-color: #e7e9fc;
 }
 
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: #404bbf;
+  border: none;
+  fill: #ffffff;
+}
 .close-icon {
   stroke: currentColor;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-caption {
+  color: #2E2F42;
   width: 360px;
+  text-align: center;
   margin-bottom: 16px;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-
+.form-inputs{
+margin-bottom: 8px;
+}
 .form-label {
   display: block;
   color: #8e8f99;
   font-size: 12px;
   font-weight: 400;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.04em;
-  margin-bottom: 4px; 
 }
 
 .input-icons {
  position: relative;
-  margin-bottom: 8px;
 }
 
 .form-input {
@@ -604,7 +623,7 @@ border: 1px solid var(--IRIS, #4D5AE5);
   transform: translateY(-50%);
   left: 16px;
   stroke: currentColor;
-  transition: fill 300ms ease-in;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input:focus+.form-icon {
   fill: #4D5AE5;
