--- a/css/styles.css
+++ b/css/styles.css
@@ -447,67 +447,66 @@ img {
 }
 
 .footer-wrapper {
-margin-left: auto;
+  margin-left: auto;
 }
-.wrapper-caption{
-  color:  #FFF;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    margin-bottom: 16px;
+.wrapper-caption {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
 }
-.subscribe-form{
+.subscribe-form {
   display: flex;
   align-items: center;
   gap: 24px;
 }
-.subscribe-form-field{}
-.subscribe-form-input{
+.subscribe-form-field {
+}
+.subscribe-form-input {
   padding: 8px 16px;
   border-radius: 4px;
   width: 264px;
   height: 40px;
   background-color: transparent;
-  border: 1px solid  #FFF;
+  border: 1px solid #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  color: #FFF;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 2;
-    letter-spacing: 0.04em;
+  color: #fff;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
 }
-  .subscribe-form-input::placeholder {
-  color:  #FFF;
+.subscribe-form-input::placeholder {
+  color: #fff;
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
 }
-.subscribe-form-button{
+.subscribe-form-button {
   min-width: 165px;
   height: 40px;
-  color:  #FFF;
+  color: #fff;
   text-align: center;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
   border-radius: 4px;
-    background:  #4D5AE5;
-    display: flex;
-      padding: 8px 24px;
-      justify-content: center;
-      align-items: center;
-      gap: 16px;
-      border: none;
-      cursor: pointer;
+  background: #4d5ae5;
+  display: flex;
+  padding: 8px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  border: none;
+  cursor: pointer;
 }
 .subscribe-form-icon {
   fill: white;
   margin-left: 16px;
 }
-
-
 
 /* Modal window */
 .backdrop {
@@ -523,7 +522,8 @@ margin-left: auto;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
 
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -544,28 +544,28 @@ margin-left: auto;
   position: absolute;
   top: 50%;
   left: 50%;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 1px 3px rgba(0, 0, 0, 0.12),
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-    transform: translate(-50%, -50%) scale(1);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-btn {
-position: absolute;
-top: 24px;
-right: 24px;
-padding: 0;
-cursor: pointer;
-border: 1px solid rgba(0, 0, 0, 0.1);
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-display: flex;
-align-items: center;
-justify-content: center;
-width: 24px;
-height: 24px;
-border-radius: 50%;
-stroke-width: 1px;
-background-color: #e7e9fc;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  padding: 0;
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  stroke-width: 1px;
+  background-color: #e7e9fc;
 }
 
 .modal-btn:hover,
@@ -580,7 +580,7 @@ background-color: #e7e9fc;
 }
 
 .modal-caption {
-  color: #2E2F42;
+  color: #2e2f42;
   width: 360px;
   text-align: center;
   margin-bottom: 16px;
@@ -589,8 +589,8 @@ background-color: #e7e9fc;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.form-inputs{
-margin-bottom: 8px;
+.form-inputs {
+  margin-bottom: 8px;
 }
 .form-label {
   display: block;
@@ -599,10 +599,11 @@ margin-bottom: 8px;
   font-weight: 400;
   line-height: 1.17;
   letter-spacing: 0.04em;
+  margin-bottom: 4px;
 }
 
 .input-icons {
- position: relative;
+  position: relative;
 }
 
 .form-input {
@@ -613,9 +614,12 @@ margin-bottom: 8px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   transition: border-color 300ms ease-in;
+  background-color: transparent;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-  .form-input:focus {
-border: 1px solid var(--IRIS, #4D5AE5);
+.form-input:focus {
+  border: 1px solid var(--IRIS, #4d5ae5);
 }
 .form-icon {
   position: absolute;
@@ -625,19 +629,27 @@ border: 1px solid var(--IRIS, #4D5AE5);
   stroke: currentColor;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-input:focus+.form-icon {
-  fill: #4D5AE5;
+.form-input:focus + .form-icon {
+  fill: #4d5ae5;
 }
 
 .form-comment {
   width: 100%;
-  resize: vertical;
   min-height: 120px;
   max-height: 180px;
-  padding-top: 8px;
-  padding-left: 16px;
+  padding: 8px 16px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.form-input-user-coment {
+  margin-bottom: 16px;
+}
 .checkbox-text {
   margin-top: 16px;
   margin-bottom: 24px;
@@ -674,4 +686,3 @@ border: 1px solid var(--IRIS, #4D5AE5);
   letter-spacing: 0.04em;
   gap: 10px;
 }
-
