--- a/css/styles.css
+++ b/css/styles.css
@@ -666,12 +666,23 @@ img {
   line-height: 1.33;
   letter-spacing: 0.04em;
   text-decoration-line: underline;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
 }
 
 .submit-btn {
-  display: flex;
+  display: block;
   align-items: center;
   justify-content: center;
+  min-width: 169px;
+  height: 56px;
   padding: 16px 64px;
   margin-left: auto;
   margin-right: auto;
