--- a/css/styles.css
+++ b/css/styles.css
@@ -650,14 +650,14 @@ img {
 .form-input-user-coment {
   margin-bottom: 16px;
 }
-.checkbox-text {
+.user-privacy {
   margin-top: 16px;
   margin-bottom: 24px;
   color: #8e8f99;
   font-size: 12px;
   font-weight: 400;
-  line-height: 1.16;
   letter-spacing: 0.04em;
+  line-height: 1.17;
 }
 .privacy-police {
   color: #4d5ae5;
@@ -675,6 +675,7 @@ img {
   align-items: center;
   justify-content: center;
   fill: transparent;
+  display: inline;
 }
 
 .submit-btn {
@@ -696,4 +697,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
   gap: 10px;
+  cursor: pointer;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
