--- a/css/styles.css
+++ b/css/styles.css
@@ -650,33 +650,57 @@ img {
 .form-input-user-coment {
   margin-bottom: 16px;
 }
-.user-privacy {
-  margin-top: 16px;
+
+.form-agreement {
+  display: block;
   margin-bottom: 24px;
   color: #8e8f99;
-  font-size: 12px;
-  font-weight: 400;
-  letter-spacing: 0.04em;
-  line-height: 1.17;
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0.04em;
+    line-height: 1.17;
+}
+
+.form-agreement-checkbox {
+display: inline-flex;
+align-items: center;
+justify-content: center;
+width: 16px;
+height: 16px;
+stroke-width: 1px;
+stroke:  rgba(46, 47, 66, 0.40);
+border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 2px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-checked {
+ opacity: 0;
+}
+.checkbox:checked + .form-agreement-checkbox {
+  stroke-width: 1px;
+  stroke: #404BBF;
+  width: 16px;
+  height: 16px;
+  background-color: #404bbf;
+  
+  fill: transparent;
+  border-color: transparent;
+}
+.checkbox:checked + .form-agreement-checkbox >
+.icon-checked {
+  opacity: 1;
+  transform: scale(1);
 }
 .privacy-police {
   color: #4d5ae5;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 1.33;
-  letter-spacing: 0.04em;
   text-decoration-line: underline;
-  width: 16px;
-  height: 16px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 2px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  fill: transparent;
-  display: inline;
 }
+.form-agreement-checkbox:checked {
+background-color: #404bbf;
+border: none;
+fill: #F4F4FD;
+}
+
 
 .submit-btn {
   display: block;
