--- a/css/styles.css
+++ b/css/styles.css
@@ -667,18 +667,15 @@ align-items: center;
 justify-content: center;
 width: 16px;
 height: 16px;
-stroke-width: 1px;
-stroke:  rgba(46, 47, 66, 0.40);
 border: 1px solid rgba(46, 47, 66, 0.4);
 border-radius: 2px;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-checked {
  opacity: 0;
+ transition: 300ms;
 }
 .checkbox:checked + .form-agreement-checkbox {
-  stroke-width: 1px;
-  stroke: #404BBF;
   width: 16px;
   height: 16px;
   background-color: #404bbf;
