--- a/css/styles.css
+++ b/css/styles.css
@@ -673,14 +673,12 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 }
 .icon-checked {
  opacity: 0;
- transition: 300ms;
+ transition: 300ms ease-in;
 }
 .checkbox:checked + .form-agreement-checkbox {
   width: 16px;
   height: 16px;
   background-color: #404bbf;
-  
-  fill: transparent;
   border-color: transparent;
 }
 .checkbox:checked + .form-agreement-checkbox >
@@ -692,12 +690,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
   color: #4d5ae5;
   text-decoration-line: underline;
 }
-.form-agreement-checkbox:checked {
-background-color: #404bbf;
-border: none;
-fill: #F4F4FD;
-}
-
 
 .submit-btn {
   display: block;
