--- a/css/styles.css
+++ b/css/styles.css
@@ -673,7 +673,8 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 }
 .icon-checked {
  opacity: 0;
- transition: 300ms ease-in;
+transform: scale(0.3);
+ transition: opacity 300ms ease 150ms ;
 }
 .checkbox:checked + .form-agreement-checkbox {
   width: 16px;
