--- a/css/styles.css
+++ b/css/styles.css
@@ -676,13 +676,13 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 transform: scale(0.3);
  transition: opacity 300ms ease 150ms ;
 }
-.checkbox:checked + .form-agreement-checkbox{
+.checkbox:checked + .agreement-checkbox > .form-agreement-checkbox{
   width: 16px;
   height: 16px;
   background-color: #404bbf;
   border-color: transparent;
 }
-.checkbox:checked + .form-agreement-checkbox >
+.checkbox:checked + .agreement-checkbox > .form-agreement-checkbox >
 .icon-checked {
   opacity: 1;
   transform: scale(1);
