--- a/css/styles.css
+++ b/css/styles.css
@@ -671,6 +671,7 @@ border: 1px solid rgba(46, 47, 66, 0.4);
 border-radius: 2px;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 cursor: pointer;
+fill: transparent;
 }
 .icon-checked {
  opacity: 0;
@@ -682,6 +683,8 @@ transform: scale(0.3);
   height: 16px;
   background-color: #404bbf;
   border-color: transparent;
+  border: none;
+  fill: #F4F4FD;
 }
 .checkbox:checked + .agreement-checkbox > .form-agreement-checkbox >
 .icon-checked {
