--- a/css/styles.css
+++ b/css/styles.css
@@ -659,6 +659,7 @@ img {
   font-weight: 400;
   letter-spacing: 0.04em;
   line-height: 1.17;
+  user-select: none;
 }
 
 .form-agreement-checkbox {
